--- a/hrms-app/package.json
+++ b/hrms-app/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.3.3",
+		"express": "^4.18.2",
 		"form-data": "^4.0.0",
 		"react": "^18.2.0",
 		"react-datepicker": "^4.10.0",
